# KnightKing

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  knightking.cmake
dataset/: README.md  karate.txt
include/: constants.hpp  graph.hpp  mpi_helper.hpp  option_helper.hpp  path.hpp  storage.hpp  type.hpp  util.hpp  walk.hpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  deepwalk.cpp  deepwalk.hpp  metapath.cpp  metapath.hpp  metascheme.hpp  node2vec.cpp  node2vec.hpp  ppr.cpp  ppr.hpp  static_comp.hpp
src/examples/: CMakeLists.txt  biased_walk.cpp  dynamic_walk.cpp  simple_walk.cpp
src/tests/: CMakeLists.txt  generator_helper.hpp  test.hpp  test_bound.cpp  test_deepwalk.cpp  test_graph.cpp  test_metapath.cpp  test_node2vec.cpp  test_outlier.cpp  test_path.cpp  test_ppr.cpp  test_rw.hpp  test_storage.cpp  test_walk.hpp  test_walker.cpp
src/tools/: CMakeLists.txt  gconverter.cpp
